--- a/bms-admin/src/main/webapp/resources/js/plugins/raty-js/jquery.raty.css
+++ b/bms-admin/src/main/webapp/resources/js/plugins/raty-js/jquery.raty.css
@@ -2,6 +2,10 @@
   font-size: 2em;
 }
 
+.cancel-on-small-png, .cancel-off-small-png, .star-on-small-png, .star-off-small-png, .star-half-small-png {
+  font-size: 0.8em;
+}
+
 @font-face {
   font-family: "raty";
   font-style: normal;
@@ -13,7 +17,8 @@
   src: url("./fonts/raty.woff") format("woff");
 }
 
-.cancel-on-png, .cancel-off-png, .star-on-png, .star-off-png, .star-half-png {
+.cancel-on-png, .cancel-off-png, .star-on-png, .star-off-png, .star-half-png,
+.cancel-on-small-png, .cancel-off-small-png, .star-on-small-png, .star-off-small-png, .star-half-small-png {
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
   font-family: "raty";
@@ -25,22 +30,22 @@
   text-transform: none;
 }
 
-.cancel-on-png:before {
+.cancel-on-png:before, .cancel-on-png:before {
   content: "\e600";
 }
 
-.cancel-off-png:before {
+.cancel-off-png:before, .cancel-off-small-png:before {
   content: "\e601";
 }
 
-.star-on-png:before {
+.star-on-png:before, .star-on-small-png:before {
   content: "\f005";
 }
 
-.star-off-png:before {
+.star-off-png:before, .star-off-small-png:before {
   content: "\f006";
 }
 
-.star-half-png:before {
+.star-half-png:before, .star-half-small-png:before {
   content: "\f123";
 }
